# cecil_cmake

./: CMakeLists.txt  README.md  cmake_learn.md
examples/02_env/: CMakeLists.txt
examples/03_make_install/: CMakeLists.txt  main.cpp
examples/hello/src/: CMakeLists.txt
exmaples/hello/: CMakeLists.txt  main.cpp
